removed ephemerality, added transitions which are able to do more things
